# Geant4-Agent

./: .gitignore  README.md  start_ui.ps1  stop_ui.ps1
bert_lab/: README.md  bert_lab_data.py  end_to_end.py  infer.py  llm_bridge.py  ollama_client.py  ollama_config.json  ollama_data.py  train_ner.py  train_structure.py
builder/: __init__.py
core/: __init__.py  semantic_frame.py
docs/: ARCHITECTURE.md  README.md  bilingual_dialogue_eval_strict_contract_2026-03-03.json  bilingual_dialogue_eval_strict_contract_2026-03-03.md  dialogue_readiness_report_2026-03-02.md  graph_search_eval_report.md  multiturn_dialogue_eval_strict_contract_2026-03-03.json  multiturn_dialogue_eval_strict_contract_2026-03-03.md  multiturn_regression_ollama_2026-03-05.json  multiturn_regression_ollama_2026-03-05.md  regression_3class_report_2026-02-13.md  regression_3class_report_2026-02-13_ollama.md
geometry/: README.md  cli.py  feasibility.py  synthesize.py
knowledge/: README.md  cli.py  validate.py
legacy/: README.md
llm/: README.md
nlu/: __init__.py  runtime_semantic.py  uncertainty.py
planner/: README.md  __init__.py  agent.py  question_planner.py  question_renderer.py
runtime/geant4_local_app/: CMakeLists.txt  main.cc
scripts/: build_structure_v2_dataset.py  run_casebank_regression.py  run_multiturn_regression_ollama.py  run_strict_contract_eval.py  train_structure_v2.py  verify_eval_casebank.py
tests/: test_candidate_preprocess.py  test_config_defaults.py  test_derived_sync.py  test_dialogue_agent.py  test_dialogue_grounding.py  test_dialogue_naturalization.py  (+34 more)
(+335 files in other folders)
